--- a/index.html
+++ b/index.html
@@ -9,15 +9,23 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700;900&display=swap" rel="stylesheet">
     <style>
+        main {
+            position: relative;
+            aspect-ratio: 16 / 10;
+        }
         body {
             font-family: 'Noto Sans KR', sans-serif;
         }
         /* 슬라이드 기본 스타일 */
         .slide {
-            display: none;
-            min-height: 80vh;
-            justify-content: center;
-            flex-direction: column;
+              position: absolute;
+              top: 0;
+              left: 0;
+              width: 100%;
+              height: 100%;
+             display: none;
+             justify-content: center;
+             flex-direction: column;
         }
         /* 활성화된 슬라이드만 보이도록 설정 */
         .slide.active {
