--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <style>
         main {
             position: relative;
+            width: 100%;
             aspect-ratio: 16 / 10;
         }
         body {
@@ -54,9 +55,9 @@
             <h1 class="text-2xl font-bold">🤖 나만의 로봇 탄생! 레고 코딩 캠프</h1>
         </header>
 
-        <main id="presentation-container" class="p-6 md:p-10">
+        <main id="presentation-container">
             <!-- Slide 1: Title Page -->
-            <section id="slide-1" class="slide active">
+            <section id="slide-1" class="slide active p-6 md:p-10">
                 <div class="text-center">
                     <h1 class="text-6xl font-black text-[#49A4B8] mb-4 leading-relaxed">나만의 로봇 탄생!<br> 레고 코딩 캠프</h1>
                     <p class="text-3xl text-gray-600">나의 첫 로봇 코딩</p>
@@ -65,7 +66,7 @@
             </section>
 
             <!-- Slide 2: Introduction -->
-            <section id="slide-2" class="slide">
+            <section id="slide-2" class="slide p-6 md:p-10">
                 <h2 class="text-4xl font-black text-gray-800 mb-4">1. 안녕, 로봇 친구! 👋</h2>
                 <div class="flex flex-col md:flex-row gap-8 items-center">
                     <div class="md:w-1/2">
@@ -84,7 +85,7 @@
             </section>
 
             <!-- Slide 3: Assembly -->
-            <section id="slide-3" class="slide">
+            <section id="slide-3" class="slide p-6 md:p-10">
                 <h2 class="text-4xl font-black text-gray-800 mb-4">2. 나만의 로봇 만들기! 🛠️</h2>
                  <div class="flex flex-col md:flex-row gap-8 items-center">
                     <div class="md:w-1/2">
@@ -99,7 +100,7 @@
             </section>
 
             <!-- Slide 4: Connection -->
-            <section id="slide-4" class="slide">
+            <section id="slide-4" class="slide p-6 md:p-10">
                 <div class="w-full">
                     <h2 class="text-4xl font-black text-gray-800 mb-6 text-center">3. 로봇과 컴퓨터 연결하기 🔌</h2>
                     <div class="flex flex-col md:flex-row gap-8 items-center">
@@ -115,7 +116,7 @@
             </section>
 
             <!-- Slide 5: Mission 1 -->
-            <section id="slide-5" class="slide">
+            <section id="slide-5" class="slide p-6 md:p-10">
                 <div class="w-full">
                     <h2 class="text-4xl font-black text-gray-800 mb-6 text-center">4. 미션 1: 로봇을 앞으로!</h2>
                     <div class="flex flex-col md:flex-row gap-8 items-center">
@@ -131,7 +132,7 @@
             </section>
 
             <!-- Slide 6: Mission 2 -->
-            <section id="slide-6" class="slide">
+            <section id="slide-6" class="slide p-6 md:p-10">
                  <div class="w-full">
                     <h2 class="text-4xl font-black text-gray-800 mb-6 text-center">5. 미션 2: 원하는 곳에 멈추기!</h2>
                     <div class="flex flex-col md:flex-row gap-8 items-center">
@@ -147,7 +148,7 @@
             </section>
 
             <!-- Slide 7: Mission 3 -->
-            <section id="slide-7" class="slide">
+            <section id="slide-7" class="slide p-6 md:p-10">
                 <div class="w-full">
                     <h2 class="text-4xl font-black text-gray-800 mb-6 text-center">6. 미션 3: 빠르거나 느리거나!</h2>
                     <div class="flex flex-col md:flex-row gap-8 items-center">
@@ -163,7 +164,7 @@
             </section>
             
             <!-- Slide 8: Mission 4 -->
-            <section id="slide-8" class="slide">
+            <section id="slide-8" class="slide p-6 md:p-10">
                 <div class="w-full">
                     <h2 class="text-4xl font-black text-gray-800 mb-6 text-center">7. 미션 4: 방향을 바꿔볼까?</h2>
                      <div class="flex flex-col md:flex-row gap-8 items-center">
@@ -179,7 +180,7 @@
             </section>
 
             <!-- Slide 9: Mission 5 -->
-            <section id="slide-9" class="slide">
+            <section id="slide-9" class="slide p-6 md:p-10">
                 <div class="w-full">
                     <h2 class="text-4xl font-black text-gray-800 mb-6 text-center">8. 미션 5: 컬링 최종 연습!</h2>
                      <div class="flex flex-col md:flex-row gap-8 items-center">
@@ -195,7 +196,7 @@
             </section>
 
             <!-- Slide 10: Wrap-up -->
-            <section id="slide-10" class="slide">
+            <section id="slide-10" class="slide p-6 md:p-10">
                 <h2 class="text-4xl font-black text-gray-800 mb-4">9. 다음 도전을 준비하며! ✨</h2>
                 <div class="flex flex-col md:flex-row gap-8 items-center">
                     <div class="md:w-1/2">
